--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="head">
       <div class="headtext">
-        <h1>Hi there!</h1>
+        <b>Hi there!</b>
       </div>
       <div class="center-cropped" style="background-image: url('https://wallpaperaccess.com/full/550656.jpg');">
         <img alt="background" src="https://wallpaperaccess.com/full/550656.jpg" />
@@ -31,6 +31,7 @@
         <a href="https://sites.google.com/view/lukisonej">Quick blog</a>
         <a href="subhtml/videos.html">Videos</a>
         <a href="subhtml/tests.html">Test</a>
+        <a href="buttons/index.html">Buttons... Yeey!</a>
       </div>
       <div class="menu">
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Let's see!</span>
