--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <script type="text/javascript" src="scripts/sidenav.js"></script>
       <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="subhtml/sorry.html">Books!</a>
+        <a href="time-t/index.html">Books!</a>
         <a href="subhtml/sorry.html">My work</a>
         <a href="subhtml/sorry.html">My free time work</a>
         <a href="https://sites.google.com/view/lukisonej">Quick blog</a>
@@ -38,8 +38,8 @@
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Let's see!</span>
       </div>
     </div>
+    <button class="btn-toggle">Světlý režim1</button>
     <script type="text/javascript" src="scripts/lighttheme.js"></script>
-    <button class="btn-toggle">Světlý režim</button>
     <div class="wiget">
       <a target="_blank" href="https://www.booked.cz/weather/prague-18152">
         <img src="https://w.bookcdn.com/weather/picture/32_18152_1_13_3498db_250_2980b9_ffffff_ffffff_1_2071c9_ffffff_0_6.png?scode=124&domid=&anc_id=1097"  alt="booked.net"/>
