--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="headtext">
         <b>Hi there!</b>
       </div>
-      <div class="center-cropped" style="background-image: url('https://wallpaperaccess.com/full/550656.jpg');">
-        <img alt="background" src="https://wallpaperaccess.com/full/550656.jpg" />
+      <div class="center-cropped" rel="noreferrer" style="background-image: url('https://wallpaperaccess.com/full/550656.jpg');">
+        <img alt="background" rel="noreferrer" src="https://wallpaperaccess.com/full/550656.jpg" />
       </div>
     </div>
     <div class="main">
@@ -41,8 +41,8 @@
     <button class="btn-toggle">Světlý režim1</button>
     <script type="text/javascript" src="scripts/lighttheme.js"></script>
     <div class="wiget">
-      <a target="_blank" href="https://www.booked.cz/weather/prague-18152">
-        <img src="https://w.bookcdn.com/weather/picture/32_18152_1_13_3498db_250_2980b9_ffffff_ffffff_1_2071c9_ffffff_0_6.png?scode=124&domid=&anc_id=1097"  alt="booked.net"/>
+      <a target="_blank" rel="noreferrer" href="https://www.booked.cz/weather/prague-18152">
+        <img rel="noreferrer" src="https://w.bookcdn.com/weather/picture/32_18152_1_13_3498db_250_2980b9_ffffff_ffffff_1_2071c9_ffffff_0_6.png?scode=124&domid=&anc_id=1097"  alt="booked.net"/>
       </a>
     </div>
     <div class="content">
@@ -77,7 +77,7 @@
       <h1>Blah</h1>
     </div>
     <div class="meme" style="text-align:center">
-      <iframe title="meme" id="memeVideo" class="memeVideo" src="" frameborder="0" width="480px" height="270px" allow="autoplay"></iframe>
+      <iframe rel="noreferrer" title="meme" id="memeVideo" class="memeVideo" src="" frameborder="0" width="480px" height="270px" allow="autoplay"></iframe>
       <button class="close">X</button>
       <button id="next" class="next">›</button>
       <script type="text/javascript" src="scripts/meme.js" onload="randomMeme()"></script>
