--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Just someones terrible hand written website...">
     <title>Totaly normal page</title>
     <link rel="stylesheet" href="styles/universal.css">
     <link rel="stylesheet" href="styles/main.css">
