--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Totaly normal page</title>
     <link rel="stylesheet" href="styles/universal.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/meme.css"
+    <link rel="stylesheet" href="styles/meme.css">
     <link rel="icon" href="images/L4.jpg">
+    <link rel="dns-prefetch" href="https://v.embed-cdn.com">
+    <link rel="dns-prefetch" href="https://statics.streamable.com">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -17,7 +19,7 @@
         <b>Hi there!</b>
       </div>
       <div class="center-cropped" rel="noreferrer" style="background-image: url('https://wallpaperaccess.com/full/550656.jpg');">
-        <img alt="background" rel="noreferrer" src="https://wallpaperaccess.com/full/550656.jpg" />
+        <img class="HiBackground" alt="background" rel="noreferrer" src="https://wallpaperaccess.com/full/550656.jpg" />
       </div>
     </div>
     <div class="main">
@@ -43,7 +45,7 @@
     <script type="text/javascript" src="scripts/lighttheme.js"></script>
     <div class="wiget">
       <a target="_blank" rel="noreferrer" href="https://www.booked.cz/weather/prague-18152">
-        <img rel="noreferrer" src="https://w.bookcdn.com/weather/picture/32_18152_1_13_3498db_250_2980b9_ffffff_ffffff_1_2071c9_ffffff_0_6.png?scode=124&domid=&anc_id=1097"  alt="booked.net"/>
+        <img class="weather" rel="noreferrer" src="https://w.bookcdn.com/weather/picture/32_18152_1_13_3498db_250_2980b9_ffffff_ffffff_1_2071c9_ffffff_0_6.png?scode=124&domid=&anc_id=1097"  alt="booked.net"/>
       </a>
     </div>
     <div class="content">
