--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="images/L4.jpg">
     <link rel="dns-prefetch" href="https://v.embed-cdn.com">
     <link rel="dns-prefetch" href="https://statics.streamable.com">
+    <link rel="dns-prefetch" href="https://cdn.embed.ly">
+    <link rel="dns-prefetch" href="https://v.embed-cdn.com">
+    <link rel="dns-prefetch" href="https://statics.streamable.com">
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
