--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a href="subhtml/sorry.html">My free time work</a>
         <a href="https://sites.google.com/view/lukisonej">Quick blog</a>
         <a href="subhtml/videos.html">Videos</a>
-        <a href="cutt.ly/InThbKf">Nightcore</a>
+        <a href="https://cutt.ly/InThbKf">Nightcore</a>
       </div>
       <div class="menu">
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Let's see!</span>
