--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <a href="subhtml/sorry.html">My free time work</a>
         <a href="https://sites.google.com/view/lukisonej">Quick blog</a>
         <a href="subhtml/videos.html">Videos</a>
+        <a href="https://open.spotify.com/playlist/3NfZn6xeNOyuREvt4HxdhD?si=jRy6CU3NS46QH8CIfI7Eig&utm_source=copy-link&dl_branch=1">Music</a>
         <a href="https://cutt.ly/InThbKf">Nightcore</a>
       </div>
       <div class="menu">
