--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Just someones terrible hand written website...">
-    <title>Totaly normal page</title>
+    <title>Lukis</title>
     <link rel="stylesheet" href="styles/universal.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/meme.css">
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="main">
-      <h1>Vitejte na uvodni strance Lukisova!</h1>
+      <h1>Vítejte na úplně první variaci mé stránky, velké přepracování se blíží, mate se na co těšit!</h1>
     </div>
     <div class="dropdown">
       <script type="text/javascript" src="scripts/sidenav.js"></script>
@@ -53,35 +53,6 @@
       </a>
     </div>
     <div class="content">
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
-      <h1>Blah</h1>
     </div>
     <div class="meme" style="text-align:center">
       <iframe rel="noreferrer" title="meme" id="memeVideo" class="memeVideo" src="" frameborder="0" width="480px" height="270px" allow="autoplay"></iframe>
