Odstraneni Svetly rezim'1'

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Let's see!</span>
       </div>
     </div>
-    <button class="btn-toggle">Světlý režim1</button>
+    <button class="btn-toggle">Světlý režim</button>
     <script type="text/javascript" src="scripts/lighttheme.js"></script>
     <div class="wiget">
       <a target="_blank" rel="noreferrer" href="https://www.booked.cz/weather/prague-18152">
