--- a/else/privacypolicy.html
+++ b/else/privacypolicy.html
@@ -4,7 +4,7 @@
 
   <h1 id="privacy-policy">Privacy Policy</h1>
   <p>Privacy Policy for Calendar To Web</p>
-  <h3 id="this-app-does-not-handle-or-store-any-data-everything-is-dependent-on-the-handling-of-the-creator-">This app does not handle or store any data on its own, everything is dependent on the handling of the creator.</h3>
+  <h3>This app does NOT store any data on its own, everything is just passed through to the end user.</h3>
   <p>Only a selected personel will be allowed to modify the app and add new users, all accounts that will ever be linked to this app DOES NOT include ANY SENSITIVE personal data</p>
 
 </body>
