Updated mobile interface

--- a/vaucher/5318008.html
+++ b/vaucher/5318008.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Slevømat Voucher 5318008</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/voucher.css">
 </head>
 <body>
@@ -38,7 +39,7 @@
 
     changeDateBtn.addEventListener('click', () => {
       // Show a funny error message in red
-      errorMessage.textContent = "Oops! The reservation system is currently on a coffee break. Please try again later!";
+      errorMessage.textContent = "Oops! Rezervační systém si dává přestávku na kafe, zkuse to znovu za inf let!";
       errorMessage.style.display = "block";
     });
   </script>
