--- a/vaucher/support.html
+++ b/vaucher/support.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Slevømat Voucher</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/voucher.css">
   <script defer src="../scripts/voucher.js"></script>
 </head>
@@ -12,6 +13,7 @@
     <label for="voucher-input">Kod vaucheru ze Slevømatu:</label>
     <input type="text" id="voucher-input" placeholder="Zadejte kód">
     <button id="submit-btn">Submit</button>
+    <p id="error-message" style="color:red; margin-top:12px; display:none;"></p>
   </div>
 </body>
 </html>
